--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 <script>
             
        let msg = document.getElementById("msg");
-       msg.innerHTML = "Your file does'nt exist";
+       msg.innerHTML = "your file is not found here!!!";
 
 let gohome = () =>{
              window.location.href ="index.html";
